Fix card widths to fill layout, standardize secondary headlines, fix scrollbar jump

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,6 +61,9 @@
   * {
     border-color: hsl(var(--border));
   }
+  html {
+    overflow-y: scroll;
+  }
   body {
     background-color: hsl(var(--background));
     color: hsl(var(--foreground));
